--- a/public/css/materiales.css
+++ b/public/css/materiales.css
@@ -1,8 +1,8 @@
 hr {
-    width: 80%;
     display: inline-block;
-    height: 10px;
+    width: 25px;
+    height: 28px;
     border: none;
     margin-top:0px;
-    margin-bottom:0px;
+    margin-bottom: -9px;
 }
