Empezados los cuadros de ayuda

--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -5810,6 +5810,13 @@ button.close {
   position: relative;
   padding: 15px;
 }
+
+.extra-body {
+  position: relative;
+  padding: 15px;
+}
+
+
 .modal-footer {
   padding: 15px;
   text-align: right;
